Fix markdown logo on dark mode

--- a/app/assets/stylesheets/reviews-dark.scss
+++ b/app/assets/stylesheets/reviews-dark.scss
@@ -16,4 +16,8 @@
     border-color: #DBDBCC;
     background-color: #4e4411;
   }
+
+  .markdown-logo img {
+    filter: invert(1);
+  }
 }
